--- a/technical/eez-obis.Rmd
+++ b/technical/eez-obis.Rmd
@@ -151,9 +151,13 @@ leaflet(esp) %>%
     values = ~n_spp_log, title = '# species (log10)')
 ```
 
-## Map Spain & Neighbor EEZs
+## Get OBIS riMap Spain & Neighbor EEZs
 
 ```{r map spain & neighbors}
+
+
+occ = readRDS('~/mbon_data_big/technical/obis/obis_occ.rds') # 23 secs
+
 # # get Spain's neighborhood
 # nbr = eez_s005 %>%
 #   filter(
