--- a/technical/obis.Rmd
+++ b/technical/obis.Rmd
@@ -54,22 +54,32 @@ for (x in seq(-180, 179)){ # x = seq(-180, 180)[1] # x = 0
   }
 }
 
+rm()
 
 # summarize longitudinally
-for (y in seq(-90, 89)){ # y = seq(-90, 90)[1] # y = -50
+for (y in seq(-90, 89)){ # y = seq(-90, 90)[1] # y = 50
   cat(sprintf('%d\n', y))
+  
+  rds = sprintf('%s/occ_%03d.rds', dir_obis_cache, y)
+  if (file.exists(rds)){
+    cat(sprintf('  skipping: %s exists\n', basename(rds)))
+    next
+  }
 
   csvs = tibble(
     path = list.files(
       dir_obis_cache, full.names=T,
-      pattern = sprintf('occ_[-]*[0-9]+_%d.csv', y))) %>%
+      pattern = sprintf('occ_[-]*[0-9]+_%03d\\.csv', y))) %>%
     mutate(
       file = basename(path),
       size = file.size(path)) %>%
     filter(size > 0)
   
-  if (nrow(csvs) == 0) next
-
+  if (nrow(csvs) == 0){
+    cat('  no data\n')
+    next
+  }
+  
   suppressMessages({
     df_list = lapply(csvs$path, read_csv)
   })
@@ -82,16 +92,18 @@ for (y in seq(-90, 89)){ # y = seq(-90, 90)[1] # y = -50
   
   df = rbindlist(df_list, fill=T)
   
-  rds = sprintf('%s/occ_%d.rds', dir_obis_cache, y)
   saveRDS(df, rds)
 }
 
 
+list.files(
+    dir_obis_cache, full.names=T,
+    pattern = sprintf('occ_.*\\.rds'))
 
 rdss = tibble(
   path = list.files(
     dir_obis_cache, full.names=T,
-    pattern = sprintf('occ_[-]*[0-9].\\.rds'))) %>% 
+    pattern = sprintf('occ_[-]*[0-9]+\\.rds'))) %>% 
   mutate(
     file = basename(path),
     size = file.size(path)) %>% 
@@ -103,8 +115,8 @@ rdss = tibble(
     size_pct = size_cum / size_sum * 100)
 rdss
 
-#for (i in 1:nrow(rdss)){ # i=1
-for (i in 75:nrow(rdss)){ # i=1
+for (i in 1:nrow(rdss)){ # i=1
+#for (i in 75:nrow(rdss)){ # i=1
 
   cat(sprintf('%02d: %s (%0.2f%%)\n', i, basename(rdss$path[i]), rdss$size_pct[i]))
   d = readRDS(rdss$path[i])
@@ -133,7 +145,7 @@ for (i in 75:nrow(rdss)){ # i=1
   }
 }
 
-write_csv(D, file.path(dir_obis, 'obis_occ.csv')) # 1,789 MB
+#write_csv(D, file.path(dir_obis, 'obis_occ.csv')) # 1,789 MB
 saveRDS(D, file.path(dir_obis, 'obis_occ.rds'))   #   111 MB
 
 system.time({
