--- a/technical/obis.Rmd
+++ b/technical/obis.Rmd
@@ -28,7 +28,7 @@ occ_csv = file.path(dir_obis, 'occurrences.csv')
 
 ## Global all at once
 
-```{r obis global}
+```{r single obis fetch}
 library(tidyverse)
 library(robis) # devtools::install_github('iobis/robis')
 
@@ -36,12 +36,6 @@ library(robis) # devtools::install_github('iobis/robis')
 geom = sprintf(
   'POLYGON ((%d %d, %d %d, %d %d, %d %d, %d %d))',
   -180, -90, -180, 90, 180, 90, 180, -90, -180, -90)
-
-flds = c('id,decimalLongitude,decimalLatitude,
-      yearcollected,dateIdentified,
-      institutionCode,datasetName,
-      phylum,class,order,family,genus,species,scientificName,
-      aphiaID,obisID,resourceID
 
 # fetch records
 system.time({
@@ -57,7 +51,7 @@ system.time({
 
 ## Global by 1 deg cells
 
-```{r obis global}
+```{r fetch obis by 1deg cells}
 library(tidyverse)
 library(robis) # devtools::install_github('iobis/robis')
 library(data.table)
@@ -72,7 +66,6 @@ for (x in seq(-180, 179)){ # x = seq(-180, 180)[1] # x = 0
       x, y, x, y+1, x+1, y+1, x+1, y, x, y)
     occ_xy_csv = sprintf('%s/occ_%03d_%03d.csv', dir_obis_cache, x, y)
     
-    
     if (!file.exists(occ_xy_csv)){
       # fetch records
       cat(sprintf('Fetching %03d, %03d\n', x, y))
@@ -83,8 +76,6 @@ for (x in seq(-180, 179)){ # x = seq(-180, 180)[1] # x = 0
     }
   }
 }
-
-rm()
 
 # summarize longitudinally
 for (y in seq(-90, 89)){ # y = seq(-90, 90)[1] # y = 50
@@ -125,11 +116,7 @@ for (y in seq(-90, 89)){ # y = seq(-90, 90)[1] # y = 50
   saveRDS(df, rds)
 }
 
-
-list.files(
-    dir_obis_cache, full.names=T,
-    pattern = sprintf('occ_.*\\.rds'))
-
+# tbl of longitudinal files
 rdss = tibble(
   path = list.files(
     dir_obis_cache, full.names=T,
@@ -143,10 +130,8 @@ rdss = tibble(
     size_sum = sum(size),
     size_cum = cumsum(size),
     size_pct = size_cum / size_sum * 100)
-rdss
 
 for (i in 1:nrow(rdss)){ # i=1
-#for (i in 75:nrow(rdss)){ # i=1
 
   cat(sprintf('%02d: %s (%0.2f%%)\n', i, basename(rdss$path[i]), rdss$size_pct[i]))
   d = readRDS(rdss$path[i])
@@ -175,8 +160,8 @@ for (i in 1:nrow(rdss)){ # i=1
   }
 }
 
-#write_csv(D, file.path(dir_obis, 'obis_occ.csv')) # 1,789 MB
-saveRDS(D, file.path(dir_obis, 'obis_occ.rds'))   #   111 MB
+#write_csv(D, file.path(dir_obis, 'obis_occ.csv'))
+saveRDS(D, file.path(dir_obis, 'obis_occ.rds'))    #   532 MB
 
 system.time({
   occ = readRDS('~/mbon_data_big/technical/obis/obis_occ.rds') # 23 secs
