loading obis_occ w/ geog (not geom) per #2

--- a/technical/obis-postgis-connect.Rmd
+++ b/technical/obis-postgis-connect.Rmd
@@ -22,6 +22,10 @@ knitr::opts_chunk$set(echo = TRUE)
 On `ben@mbon`, connect to database docker container `postgis`:
 
 ```
+sudo apt install postgresql-client-common
+```
+
+```
 docker exec -it postgis bash
 ```
 
@@ -94,7 +98,7 @@ CREATE TABLE obis_occ (
   "obisID" int,
   "resourceID" int,
   "year" int,
-  "geom" GEOGRAPHY(POINT,4326));  -- custom
+  "geog" GEOGRAPHY(POINT,4326));  -- custom
 
 -- copy from csv
 -- \copy obis_occ FROM '/mbon/data_big/technical/obis/obis_occ_head10k.csv' WITH DELIMITER ',' CSV HEADER;
@@ -119,22 +123,11 @@ COPY obis_occ (
   FROM '/mbon/data_big/technical/obis/obis_occ.csv'
   WITH DELIMITER AS ',' CSV HEADER NULL AS 'NA';
 
--- add primary key
---ALTER TABLE obis_occ ADD COLUMN gid serial PRIMARY KEY;
-
--- Add point geometry column to table
---ALTER TABLE obis_occ ADD COLUMN geom geometry(Point,4326);
-
--- Populate column with point geometries
-update obis_occ set geom = ST_SetSRID(ST_MakePoint( "decimalLongitude", "decimalLatitude" ), 4326);
 -- Populate column with point geographies
-UPDATE obis_occ AS o SET geom = ST_GeographyFromText('SRID=4326;POINT(' || "decimalLongitude" || ' ' || "decimalLatitude" || ')');
+UPDATE obis_occ AS o SET geog = ST_GeographyFromText('SRID=4326;POINT(' || "decimalLongitude" || ' ' || "decimalLatitude" || ')');
 
 -- Create a spatial index on points
-CREATE INDEX idx_obis_occ_geom ON obis_occ USING GIST(geom);
-
--- Rename column to reflect geography, not geometry
-ALTER TABLE obis_occ RENAME COLUMN geom TO geog;
+CREATE INDEX idx_obis_occ_geog ON obis_occ USING GIST(geog);
 
 -- Create other indexes
 CREATE INDEX idx_obis_occ_lon     ON obis_occ ("decimalLongitude");
